--- a/voom-fe/src/styles.css
+++ b/voom-fe/src/styles.css
@@ -1,5 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
-@import "tailwindcss";
+@import 'tailwindcss';
+@import 'leaflet/dist/leaflet.css';
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+:root {
+  --primary-color: #0f1e52;
+  --primary-hover: #0c35da;
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0px auto;
+}
+
+.input-field {
+  @apply rounded-4xl border-[2px] border-[--primary-color] p-[10px] mt-[10px];
+}
