feat: fix logo not showing up; update custom theme; update value-input components; update registration form and login form; connect forms together;

--- a/voom-fe/src/app/shared/value-input/value-input-date/value-input-date.html
+++ b/voom-fe/src/app/shared/value-input/value-input-date/value-input-date.html
@@ -3,7 +3,9 @@
   <input [matDatepicker]="picker" matInput>
   <mat-datepicker-toggle [for]="picker" matIconSuffix></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
-  @for (error of getErrors(); track error) {
-    <mat-error class="text-[12px]">{{ error }}</mat-error>
-  }
+  <mat-error class="text-error">
+    @for (error of getErrors(); track error) {
+      {{ error }}
+    }
+  </mat-error>
 </mat-form-field>
