--- a/voom-fe/src/app/shared/value-input/value-input-string/value-input-string.html
+++ b/voom-fe/src/app/shared/value-input/value-input-string/value-input-string.html
@@ -1,7 +1,12 @@
 <mat-form-field class="w-full">
   <mat-label>{{ label }}</mat-label>
-  <input matInput [type]="'text'" [formControl]="formControl"/>
-  <mat-error>
+  <input matInput [type]="innerHide() ? 'password': 'text'" [formControl]="formControl"/>
+  @if (hide) {
+    <button matIconButton matSuffix (click)="innerHide.set(!innerHide())" [matTooltip]="'Toggle visibility'">
+      <mat-icon>{{innerHide() ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
+  }
+  <mat-error class="text-error" >
     @for (error of getErrors(); track error) {
       {{ error }}
     }
