--- a/voom-fe/src/app/shared/value-input/value-input-time/value-input-time.html
+++ b/voom-fe/src/app/shared/value-input/value-input-time/value-input-time.html
@@ -3,7 +3,9 @@
   <input matInput [matTimepicker]="picker">
   <mat-timepicker-toggle matSuffix [for]="picker"></mat-timepicker-toggle>
   <mat-timepicker #picker></mat-timepicker>
-  @for (error of getErrors(); track error) {
-    <mat-error class="text-[12px]">{{ error }}</mat-error>
-  }
+  <mat-error class="text-error">
+    @for (error of getErrors(); track error) {
+      {{ error }}
+    }
+  </mat-error>
 </mat-form-field>
