--- a/voom-fe/src/styles.css
+++ b/voom-fe/src/styles.css
@@ -1,5 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@theme {
+  --color-primary: #0f1e52;
+  --color-secondary: #4a68d2;
+  --color-tertiary: #b1b2b5;
+  --color-error: #7d0220;
+}
