--- a/voom-fe/src/app/unauthenticated/login/login.html
+++ b/voom-fe/src/app/unauthenticated/login/login.html
@@ -1,4 +1,4 @@
-<div class="md:py-32">
+<div class="py-16">
   <div class="flex justify-center">
     <div class="max-w-xl space-y-8">
       <div class="w-96">
