--- a/voom-fe/src/app/app.html
+++ b/voom-fe/src/app/app.html
@@ -1,1 +1,3 @@
-<app-header></app-header> <app-map></app-map> <app-ride-form></app-ride-form>
+<app-header></app-header><router-outlet></router-outlet>
+
+
