feat: update responsive design

--- a/voom-fe/src/app/unauthenticated/login/login.html
+++ b/voom-fe/src/app/unauthenticated/login/login.html
@@ -1,7 +1,7 @@
 <div class="py-16">
   <div class="flex justify-center">
     <div class="max-w-xl space-y-8">
-      <div class="w-96">
+      <div class="w-80 md:w-96">
         <img [attr.src]="'assets/images/logo.png'" alt="Voom Logo" class="w-96"/>
         <h1 class="text-xl text-center text-primary">Sign in to continue</h1>
       </div>
