--- a/voom-fe/src/app/unauthenticated/registration/registration.html
+++ b/voom-fe/src/app/unauthenticated/registration/registration.html
@@ -1,8 +1,8 @@
 <div class="py-12">
   <div class="flex justify-center">
-    <div class="w-xl space-y-8">
-      <div class="w-xl grid justify-center">
-        <img [attr.src]="'assets/images/logo.png'" alt="Voom Logo" class="w-96"/>
+    <div class="w-lg space-y-8">
+      <div class="grid justify-center">
+        <img [attr.src]="'assets/images/logo.png'" alt="Voom Logo" class="max-w-96"/>
         <h1 class="text-xl text-center text-primary">Create new account</h1>
       </div>
       <div>
