--- a/voom-fe/src/styles.css
+++ b/voom-fe/src/styles.css
@@ -1,11 +1,21 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
 @theme {
   --color-primary: #0f1e52;
   --color-secondary: #4a68d2;
   --color-tertiary: #b1b2b5;
   --color-error: #7d0220;
+}
+
+#map {
+  @apply w-full h-[600px];
 }
