--- a/voom-app/app/src/main/res/layout/fragment_registration.xml
+++ b/voom-app/app/src/main/res/layout/fragment_registration.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="?attr/fullscreenBackgroundColor"
     android:theme="@style/ThemeOverlay.VoomApp.FullscreenContainer"
-    tools:context=".unauthenticated.RegistrationFragment">
+    tools:context=".unauthenticated.registration.RegistrationFragment">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/registration_nav_host"
@@ -14,6 +14,6 @@
         android:layout_height="match_parent"
         app:defaultNavHost="false"
         app:navGraph="@navigation/registration_nav_graph"
-        app:name="androidx.navigation.fragment.NavHostFragment"/>
+        android:name="androidx.navigation.fragment.NavHostFragment"/>
 
 </FrameLayout>
