--- a/voom-app/app/src/main/res/layout/dialog_change_password.xml
+++ b/voom-app/app/src/main/res/layout/dialog_change_password.xml
@@ -13,7 +13,8 @@
         android:text="@string/change_password"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -22,14 +23,16 @@
         app:boxCornerRadiusTopStart="24dp"
         app:boxCornerRadiusTopEnd="24dp"
         app:boxCornerRadiusBottomStart="24dp"
-        app:boxCornerRadiusBottomEnd="24dp">
+        app:boxCornerRadiusBottomEnd="24dp"
+        app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_new_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/new_password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -40,14 +43,16 @@
         app:boxCornerRadiusTopStart="24dp"
         app:boxCornerRadiusTopEnd="24dp"
         app:boxCornerRadiusBottomStart="24dp"
-        app:boxCornerRadiusBottomEnd="24dp">
+        app:boxCornerRadiusBottomEnd="24dp"
+        app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirm_password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
