--- a/voom-app/app/src/main/res/layout/fragment_registration_account.xml
+++ b/voom-app/app/src/main/res/layout/fragment_registration_account.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_registration_account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -42,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8pt"
                 android:hint="@string/email"
+                android:textColorHint="@color/primary"
                 app:boxBackgroundColor="@color/white"
                 app:boxBackgroundMode="outline"
                 app:boxCornerRadiusBottomEnd="32dp"
@@ -65,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8pt"
                 android:hint="@string/password"
+                android:textColorHint="@color/primary"
                 app:boxBackgroundColor="@color/white"
                 app:boxBackgroundMode="outline"
                 app:boxCornerRadiusBottomEnd="32dp"
@@ -88,6 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8pt"
                 android:hint="@string/repeat_password"
+                android:textColorHint="@color/primary"
                 app:boxBackgroundColor="@color/white"
                 app:boxBackgroundMode="outline"
                 app:boxCornerRadiusBottomEnd="32dp"
@@ -114,6 +118,7 @@
                 android:layout_height="match_parent">
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/fragment_registration_personal_previous"
                     android:layout_width="150dp"
                     android:layout_height="match_parent"
                     android:layout_marginVertical="16dp"
@@ -123,6 +128,7 @@
                     app:cornerRadius="32dp" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/fragment_registration_personal_next"
                     android:layout_width="150dp"
                     android:layout_height="match_parent"
                     android:layout_marginVertical="16dp"
