--- a/voom-app/app/src/main/res/layout/fragment_registration_contact.xml
+++ b/voom-app/app/src/main/res/layout/fragment_registration_contact.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_registration_contact"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -42,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8pt"
                 android:hint="@string/phone_number"
+                android:textColorHint="@color/primary"
                 app:boxBackgroundColor="@color/white"
                 app:boxBackgroundMode="outline"
                 app:boxCornerRadiusBottomEnd="32dp"
@@ -65,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8pt"
                 android:hint="@string/address"
+                android:textColorHint="@color/primary"
                 app:boxBackgroundColor="@color/white"
                 app:boxBackgroundMode="outline"
                 app:boxCornerRadiusBottomEnd="32dp"
@@ -83,14 +86,35 @@
                     android:inputType="text"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.button.MaterialButton
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:paddingVertical="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/signup"
-                android:textColor="@android:color/white"
-                app:backgroundTint="@color/secondary"
-                app:cornerRadius="32dp" />
+                android:layout_height="match_parent">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/fragment_registration_contact_previous"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="16dp"
+                    android:text="@string/previous"
+                    android:textColor="@android:color/white"
+                    app:backgroundTint="@color/secondary"
+                    app:cornerRadius="32dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/fragment_registration_contact_signup"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/signup"
+                    android:textColor="@android:color/white"
+                    app:backgroundTint="@color/secondary"
+                    app:cornerRadius="32dp" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
