--- a/voom-fe/src/app/unauthenticated/login/login.html
+++ b/voom-fe/src/app/unauthenticated/login/login.html
@@ -8,7 +8,9 @@
       <div class="flex flex-col space-y-4">
         <app-value-input-string [label]="'Email'" [formControl]="form.controls.email"/>
         <app-value-input-string [label]="'Password'" [formControl]="form.controls.password" [hide]="true"/>
-        <h1 class="text-sm pb-4 text-center text-secondary cursor-pointer" (click)="forgotPassword()">Forgot password?</h1>
+        <div class="pb-4 flex justify-center">
+          <h1 class="text-sm text-secondary cursor-pointer" (click)="forgotPassword()">Forgot password?</h1>
+        </div>
         <button matButton="filled" (click)="login()">Sign in</button>
       </div>
       <div class="flex justify-center space-x-2">
