--- a/voom-fe/src/app/unauthenticated/registration/registration.html
+++ b/voom-fe/src/app/unauthenticated/registration/registration.html
@@ -37,6 +37,7 @@
             <div class="flex flex-col space-y-6 py-8">
               <app-value-input-string [label]="'Phone Number'" [formControl]="contactForm.controls.phoneNumber"/>
               <app-value-input-string [label]="'Address'" [formControl]="contactForm.controls.address"/>
+              <app-value-input-file [label]="'Profile image'" [formControl]="contactForm.controls.file" />
               <button matButton="filled" [disabled]="!contactForm.valid" (click)="register()">Sign up</button>
             </div>
           </mat-step>
