update packages; add driver-home component with map and charts; update map; update header component and routing;

--- a/voom-fe/src/app/shared/map/map.html
+++ b/voom-fe/src/app/shared/map/map.html
@@ -1,3 +1,3 @@
 <div class="map-container w-full h-[600px]">
-  <div id="map" class="w-full h-full"></div>
+  <div id="map" class="w-full rounded-2xl"></div>
 </div>
