--- a/voom-fe/src/app/core/layout/header-kt1/header-kt1.html
+++ b/voom-fe/src/app/core/layout/header-kt1/header-kt1.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="bg-white shadow-md h-20 px-6 flex justify-between sticky top-0 z-50">
+<mat-toolbar class="bg-white shadow-md h-20 px-6 flex justify-between top-0 z-50">
   <div class="flex items-center cursor-pointer" routerLink="/">
     <img src="assets/images/logo.png" alt="Voom" class="h-12 ml-12" />
   </div>
@@ -6,6 +6,7 @@
   <div class="flex items-center gap-6 text-blue-900">
     <!-- <button mat-button routerLink="/favorites">Favorite Routes</button> -->
 
+    <button mat-button routerLink="/driver-home">Driver Home</button>
     <button mat-button routerLink="/driver/rideHistory">Ride History</button>
 
     <!-- <button mat-button>Sign Out</button> -->
